--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,7 +23,16 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-      - run: python agent.py
+
+      # 👇 NOVO: instale as dependências do requirements.txt
+      - name: Install deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Build calendars & CSVs
+        run: python agent.py
+
       - uses: actions/upload-pages-artifact@v3
         with:
           path: agent_crf_ics_v0_2/out
