--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,3 +1,17 @@
+name: Build & Publish ICS (3x daily)
+
+on:
+  schedule:
+    - cron: '0 12 * * *'  # 09:00 BRT
+    - cron: '0 16 * * *'  # 13:00 BRT
+    - cron: '0 20 * * *'  # 17:00 BRT
+  workflow_dispatch: {}    # permite rodar manualmente
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
@@ -9,9 +23,9 @@ jobs:
 
       - uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: '3.11'
 
-      # Instala as libs diretamente (garante o pyyaml)
+      # instala dependências (inclui pyyaml)
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
@@ -20,8 +34,10 @@ jobs:
       - name: Build calendars & CSVs
         run: python agent.py
 
-      - uses: actions/upload-pages-artifact@v3
+      - name: Upload artifact (out/)
+        uses: actions/upload-pages-artifact@v3
         with:
           path: agent_crf_ics_v0_2/out
 
-      - uses: actions/deploy-pages@v4
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v4
